--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,12 @@ name = "pypi"
 [packages]
 fastapi = "*"
 uvicorn = "*"
+sqlalchemy = '*'
 
 [dev-packages]
 fastapi = "*"
 uvicorn = "*"
+sqlalchemy = '*'
 
 [requires]
 python_version = "3.10"
