--- a/Pipfile
+++ b/Pipfile
@@ -6,12 +6,14 @@ name = "pypi"
 [packages]
 fastapi = "*"
 uvicorn = "*"
-sqlalchemy = '*'
+SQLAlchemy = '*'
+PyMySQL ="*"
 
 [dev-packages]
 fastapi = "*"
 uvicorn = "*"
-sqlalchemy = '*'
+SQLAlchemy = '*'
+PyMySQL ="*"
 
 [requires]
 python_version = "3.10"
