--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,11 @@ fastapi = "*"
 uvicorn = "*"
 SQLAlchemy = '*'
 PyMySQL ="*"
+pytest = "*"
+pytest-env = "*"
+pytest-asyncio = "*"
+pytest-xdist = "*"
+httpx = "*"
 
 [requires]
 python_version = "3.10"
-
