--- a/pytest.ini
+++ b/pytest.ini
@@ -5,4 +5,9 @@ log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno
 log_cli_date_format = %Y-%m-%d %H:%M:%S
 addopts = --color=yes
 env =
-    LOG_LEVEL = DEBUG
+    LOG_LEVEL=DEBUG
+
+    DB_HOST=localhost
+    DB_NAME=buzzvil
+    DB_USER=test_user
+    DB_PASSWORD=zxcsfqersdr123@~!
