광고불러오기 API 구현

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,6 +8,7 @@ env =
     LOG_LEVEL=DEBUG
 
     DB_HOST=localhost
+    DB_PORT=3306
     DB_NAME=buzzvil
     DB_USER=test_user
     DB_PASSWORD=zxcsfqersdr123@~!
