광고불러오기 API 구현 (PART I,II)

--- a/pytest.ini
+++ b/pytest.ini
@@ -12,3 +12,5 @@ env =
     DB_NAME=buzzvil
     DB_USER=test_user
     DB_PASSWORD=zxcsfqersdr123@~!
+
+    CTR_PREDICTION_SERVER=https://predict-ctr-pmj4td4sjq-du.a.run.app/
